--- a/MERN/product-manager1/client/src/App.css
+++ b/MERN/product-manager1/client/src/App.css
@@ -10,14 +10,13 @@
   flex-direction: column;
   gap:20px;
   margin-bottom: 30px;
-  justify-content: center;
-  align-items: center;
+
 }
 
 .selection{
   width:500px;
   height: 50px;
-  background-color:rgb(245, 240, 240);
+  background-color:rgb(205, 114, 114);
   border-radius: 10px;
   display: flex;
   justify-content: space-around;
@@ -33,16 +32,10 @@ h1{
   font-weight: lighter;
 }
 
-.createBtn{
-  display: flex;
-  justify-content: center;
-  background-color: rgb(232, 225, 225);
+/* .createBtn{
+  background-color: rgb(205, 114, 114));
   border:none;
   border-radius: 10px;
   width:150px;
   height:30px;
-}
-
-.fontStyles{
-  margin:20px;
-}
+} */
