--- a/MERN/authors/client/src/App.css
+++ b/MERN/authors/client/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+/* colors{
+    color:rgb(36, 85, 85);
+
+} */
+
+button{
+    height:40px;
+    color: azure;
+    background-color:rgb(52, 120, 120);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+table {
+    border-collapse: collapse;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+th,
+td {
+    border: 1px solid black;
+    padding: 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.col-1,
+.col-2{
+    flex:1;
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.col-2{
+    flex:2;
+    display: flex;
+    flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.col-all{
+    display: flex;
+    justify-content: center;
+}
+.photo{
+   width:500px;
 }
